fixed spacing

--- a/apps/weather_app/static/banner.css
+++ b/apps/weather_app/static/banner.css
@@ -3,7 +3,7 @@
     align-items:center;
     justify-content: space-between;
     font-size: larger;
-    padding: 0px 20% 0px 20%;
+    padding: 0px 10% 0px 10%;
     margin-bottom: 20px;
     height: 70px;
     background-color: rgb(26, 190, 163);
